--- a/html/login.html
+++ b/html/login.html
@@ -11,7 +11,7 @@
   <div class="decorative-element"></div>
   
   <div class="login-container">
-    <a href="../html/index.html" class="volver" title="Volver">←</a>
+    <a href="../index.html" class="volver" title="Volver">←</a>
     
      <div class="logo">
     <img src="../imagenes/LogoSazonApp.png" alt="Logo Empresa" class="logo-img">
