--- a/html/menutiendas.html
+++ b/html/menutiendas.html
@@ -7,6 +7,7 @@
       <link rel="stylesheet" href="../css/header.css">
       <link rel="stylesheet" href="../css/index.css">
       <link rel="stylesheet" href="../css/menutiendas.css">
+       <link rel="stylesheet" href="../css/whatsapp.css">
 </head>
 <body>
   <header>
@@ -235,7 +236,7 @@
         
     <div class="container">
         
-        <a href="javascript:history.back()" class="boton-volver">← Volver</a>
+     <a class="boton-volver"onclick="goBack()">← Volver</a>
         <!-- Sección de Marcas Populares -->
         <div class="brands-section">
             <h2 class="section-title">¡Los 10 más elegidos!</h2>
