--- a/html/registro.html
+++ b/html/registro.html
@@ -12,7 +12,7 @@
   <div class="decorative-element"></div>
   
   <div class="registro-container">
-    <a href="login.html" class="volver" title="Volver">←</a>
+    <button class="volver" onclick="goBack()">←</button>
     
     <div class="logo">
     <img src="../imagenes/LogoSazonApp.png" alt="Logo Empresa" class="logo-img">
