--- a/html/pago.html
+++ b/html/pago.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+    <button class="volver" onclick="goBack()">←</button>
         <div class="panel left">
             <div class="header">
                 <div class="logo">🍕</div>
