--- a/html/perfil.html
+++ b/html/perfil.html
@@ -8,9 +8,7 @@
 </head>
 <body>
     <div class="top-bar">
-        <button class="back-button" onclick="goBack()">
-            ←
-        </button>
+        <button class="back-btn" onclick="goBack()">←</button>
         <h1 class="page-title">Perfil</h1>
     </div>
 
